[package]
name = "shared"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
clap = { version = "4.5.32", features = ["derive"] }
futures-util = "0.3.31"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
tower-http = { version = "0.6.2", features = ["fs"] }

