[package]
name = "shared"
version = "1.0.2"
edition = "2024"
authors = ["Mateo Lafalce <mateolafalce@protonmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/mateolafalce/shared"
description = "A web solution developed in Rust that allows one device on a shared network to share its screen with others. It is designed for pair programming and technical meetings within development companies, as well as for individual use The computer sharing its local screen acts as a server and streams a bitstream representing the pixels of the shared image to anyone who connects to the specified URL"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
clap = { version = "4.5.32", features = ["derive"] }
futures-util = "0.3.31"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
tower-http = { version = "0.6.2", features = ["fs"] }
